--- a/config/pagesConfig.json
+++ b/config/pagesConfig.json
@@ -3,7 +3,7 @@
     "id": "home",
     "title": "Founder Central | Bite-Sized Stories for the Modern Bookworm ",
     "url": "/",
-    "description": "Dive into stories curated for the modern reader. From inspiring business tales to spine-tingling conspiracies, our diverse range is here to captivate your curiosity."
+    "description": "Unlock the secrets of business legends with Founder Central – your daily dose of inspiration and insights from the world's most successful billionaires."
   },
   "about": {
     "id": "about",
@@ -27,7 +27,7 @@
     "id": "contact",
     "title": "Contact Us | Founder Central",
     "url": "/contact",
-    "description": "Dive into stories curated for the modern reader. From inspiring business tales to spine-tingling conspiracies, our diverse range is here to captivate your curiosity."
+    "description": "Unlock the secrets of business legends with Founder Central – your daily dose of inspiration and insights from the world's most successful billionaires."
   },
   "snapshots-of-success-the-50-greatest-business-success-stories": {
     "id": "snapshots-of-success-the-50-greatest-business-success-stories",
