--- a/config/pagesConfig.json
+++ b/config/pagesConfig.json
@@ -1,7 +1,7 @@
 {
   "home": {
     "id": "home",
-    "title": "Founder Central | Bite-Sized Stories for the Modern Bookworm ",
+    "title": "Founder Central | Unlock the secrets of business legends with Founder Central ",
     "url": "/",
     "description": "Unlock the secrets of business legends with Founder Central – your daily dose of inspiration and insights from the world's most successful billionaires."
   },
