--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@editorjs/code": "^2.8.0",
+    "@editorjs/editorjs": "^2.26.5",
+    "@editorjs/embed": "^2.6.0",
+    "@editorjs/header": "^2.8.0",
+    "@editorjs/inline-code": "^1.4.0",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/paragraph": "^2.9.0",
+    "@editorjs/table": "^2.2.1",
     "@firebase/analytics": "^0.10.0",
     "@google-analytics/data": "^4.0.1",
     "@hookform/resolvers": "^3.3.1",
+    "@prisma/client": "^4.13.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-avatar": "^1.0.3",
@@ -54,12 +64,14 @@
     "next-themes": "^0.2.1",
     "node-fetch": "^2.7.0",
     "postcss": "8.4.27",
+    "prisma": "^5.5.2",
     "puppeteer": "^21.3.4",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-hook-form": "^7.46.2",
+    "react-textarea-autosize": "^8.5.3",
     "recharts": "^2.8.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
@@ -72,6 +84,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/editorjs__header": "^2.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
