--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "prisma": "^5.5.2",
     "puppeteer": "^21.3.4",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
