--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@editorjs/list": "^1.8.0",
     "@editorjs/paragraph": "^2.9.0",
     "@editorjs/table": "^2.2.1",
+    "@emailjs/browser": "^3.11.0",
     "@firebase/analytics": "^0.10.0",
     "@google-analytics/data": "^4.0.1",
     "@hookform/resolvers": "^3.3.1",
