--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@shopify/shopify-api": "^8.0.1",
+    "@types/gtag.js": "^0.0.18",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
+    "client-only": "^0.0.1",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "cors": "^2.8.5",
@@ -68,6 +70,7 @@
     "puppeteer": "^21.3.4",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
+    "react-cookie-consent": "^9.0.0",
     "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
