--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-hook-form": "^7.46.2",
+    "react-pdf": "^7.6.0",
     "react-textarea-autosize": "^8.5.3",
     "recharts": "^2.8.0",
     "tailwind-merge": "^1.14.0",
