--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@firebase/analytics": "^0.10.0",
     "@google-analytics/data": "^4.0.1",
     "@hookform/resolvers": "^3.3.1",
+    "@mdx-js/react": "^3.0.0",
     "@prisma/client": "^4.13.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
