--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@firebase/analytics": "^0.10.0",
     "@google-analytics/data": "^4.0.1",
     "@hookform/resolvers": "^3.3.1",
+    "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.4",
     "@prisma/client": "^4.13.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
@@ -45,6 +47,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@shopify/shopify-api": "^8.0.1",
     "@types/gtag.js": "^0.0.18",
+    "@types/mdx": "^2.0.10",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -64,6 +67,7 @@
     "glob": "^10.3.6",
     "lucide-react": "^0.268.0",
     "next": "^14.0.3",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "node-fetch": "^2.7.0",
     "postcss": "8.4.27",
@@ -90,6 +94,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/editorjs__header": "^2.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
